change image link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         
         <div class="col-xs-3 col-md-3 col-lg-3">
-          <img src="IMG_0224.jpg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+          <img src="https://avatars2.githubusercontent.com/u/2855219?v=3&s=460" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
         </div>
         <div class="row">
         </div>
