add link for slides of Continuous Constraints paper

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     			Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
     			Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
     			[<a href="http://www.hotdep2013.org/proc-hotdep13.pdf">PDF</a>]
+                        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf">Slides</a>]
     		</li>
     		<li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
     			Framework to Peer-to-Peer Computing Applications. 4th International 
