add Running deadlines link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   	</div>
   	<div class="panel-body">
   		<ul>
-  			<li>Software Defined Networking</li>
+  			<li>Software Defined Networking. <a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/">[Running Deadlines]</a></li>
   			<li>Network Management</li>
   		</ul>
   	</div>
@@ -131,7 +131,7 @@
   	</div>
   	<div class="panel-body">
     	<ul>
-    		<li>Badminton</li>
+    		<li><a href="http://www.badminton-lugano.ch/index.php/en/">Badminton</a></li>
     		<li>Football</li>
     	</ul>
   	</div>
