move around running deadlines

--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
   	</div>
   	<div class="panel-body">
   		<ul>
-  			<li>Software Defined Networking. <a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/">[Running Deadlines]</a></li>
+  			<li>Software Defined Networking</li>
   			<li>Network Management</li>
   		</ul>
+      <h5>Seminars & Conferences</h5>
+      <ul>
+        <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/">Running Deadlines</a></li>
+      </ul> 
   	</div>
   </div>
   <div class="panel panel-default"><a name="publication"></a>
