--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
   	</div>
   	<div class="panel-body">
     	<ul>
-    		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh: Fault Resolution System for 
+                <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
+                    NetPaxos: Consensus at Network Speed.
+                    1st ACM Sigcomm Symposium on SDN Research <a href="http://opennetsummit.org/conference/">(SOSR' 15)</a>, June 2015.
+                </li>
+    		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
     			Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
     			Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.	
     		</li>
