add NetPaxos Talk

--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
     		</ul>
   	</div>
   </div>
+  <div class="panel panel-default"><a name="talks"></a>
+    <div class="panel-heading">
+      <h3 class="panel-title">Talks</h3>
+    </div>
+    <div class="panel-body">
+      <ul>
+        <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015</li>
+      </ul>
+    </div>
+  </div>
   <div class="panel panel-default"><a name="activity"></a>
   	<div class="panel-heading">
     	<h3 class="panel-title">Activities</h3>
