--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     		<li>H.T. Dang, F. Hermenier. Higher SLA Satisfaction in Datacenters with 
     			Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
     			Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
-    			[<a href="http://www.hotdep2013.org/proc-hotdep13.pdf">PDF</a>]
+    			[<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
                         [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf">Slides</a>]
     		</li>
     		<li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
@@ -104,7 +104,7 @@
     			Conference on Computational Collective Intelligence Technologies and 
     			Applications (ICCCI 2012), Ho Chi Minh City, November 2012. 
     			Springer LNAI 7654
-    			[<a href="https://www.dropbox.com/s/isawbog91v48ch2/MapReduceP2P.pdf">PDF</a>]
+    			[<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8">PDF</a>]
     		</li>
     		<li>H V Pham, T H Dang. A Cloud-Based HPC Cluster Model for Academic Institution. 
     			Journal of Science and Technology, Vietnamese Academy of Science and 
