replace NetPaxos link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     	<ul>
                 <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
                     NetPaxos: Consensus at Network Speed.
-                    1st ACM Sigcomm Symposium on SDN Research <a href="http://opennetsummit.org/conference/">(SOSR' 15)</a>, June 2015.
+                    1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf">(SOSR' 15)</a>, June 2015.
                 </li>
     		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
     			Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
