--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
   	<div class="panel-body">
     	I'm a PhD student at USI, under supervision of Prof.
     	<a href="http://www.inf.usi.ch/faculty/soule/">Robert Soule</a>
+        and Prof. 
+    	<a href="http://www.inf.usi.ch/faculty/pedone/">Fernando Pedone</a>.
 		Before, I have worked as a teaching assistant for three years at 
 		<a href="http://hcmiu.edu.vn">Ho Chi Minh 
 		International University</a> in Vietnam. 
