--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
         <div class="col-xs-9 col-md-9 col-lg-9">
           <address>
   			<strong>PhD Student</strong><br>
-  			<a href="http://www.inf.usi.ch">Faculty of Informatics</a><br>
-  			<a href="http://www.usi.ch">University of Lugano (USI)</a><br>
+  			<a href="http://www.inf.usi.ch" target="_blank">Faculty of Informatics</a><br>
+  			<a href="http://www.usi.ch" target="_blank">University of Lugano (USI)</a><br>
   			Via Giuseppe Buffi 13,<br>
   			CH-6904 Lugano, Switzerland<br>
 		</address>
 
 		<address>
   			<strong>Huynh Tu Dang</strong><br>
-  			<a href="mailto:huynh.tu.dang@usi.ch">huynh.tu.dang@usi.ch</a>
+  			<a href="mailto:huynh.tu.dang@usi.ch" target="_blank">huynh.tu.dang@usi.ch</a>
+		</address>
+		<address>
+  			<a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00" target="_blank">Curriculum Vitae (Nov. 2015)</a>
 		</address>
         </div>
         
@@ -55,15 +58,15 @@
   	</div>
   	<div class="panel-body">
     	I'm a PhD student at USI, under supervision of Prof.
-    	<a href="http://www.inf.usi.ch/faculty/soule/">Robert Soule</a>
+    	<a href="http://www.inf.usi.ch/faculty/soule/" target="_blank">Robert Soule</a>
         and Prof. 
-    	<a href="http://www.inf.usi.ch/faculty/pedone/">Fernando Pedone</a>.
+    	<a href="http://www.inf.usi.ch/faculty/pedone/" target="_blank">Fernando Pedone</a>.
 		Before, I have worked as a teaching assistant for three years at 
-		<a href="http://hcmiu.edu.vn">Ho Chi Minh 
+		<a href="http://hcmiu.edu.vn" target="_blank">Ho Chi Minh 
 		International University</a> in Vietnam. 
-		I got my master degree in 2013 at <a href="http://unice.fr">Nice-Sophia Antipolis</a>
+		I got my master degree in 2013 at <a href="http://unice.fr" target="_blank">Nice-Sophia Antipolis</a>
 		During my internship at OASIS (INRIA, Sophia Antipolis), I worked with Prof.
-		<a href="https://sites.google.com/site/hermenierfabien/">Fabien Hermenier</a>
+		<a href="https://sites.google.com/site/hermenierfabien/" target="_blank">Fabien Hermenier</a>
   	</div>
   </div>
   <div class="panel panel-default"><a name="research"></a>
@@ -77,8 +80,8 @@
   		</ul>
       <h5>Seminars & Conferences</h5>
       <ul>
-        <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/">Running Deadlines</a></li>
-        <li><a href="http://sdn.ieee.org/conferences-events.html">sdn.ieee.org</a></li>
+        <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/" target="_blank">Running Deadlines</a></li>
+        <li><a href="http://sdn.ieee.org/conferences-events.html" target="_blank">sdn.ieee.org</a></li>
       </ul> 
   	</div>
   </div>
@@ -90,7 +93,7 @@
     	<ul>
                 <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
                     NetPaxos: Consensus at Network Speed.
-                    1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf">(SOSR' 15)</a>, June 2015.
+                    1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
                 </li>
     		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
     			Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
@@ -100,14 +103,14 @@
     			Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
     			Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
     			[<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
-                        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf">Slides</a>]
+                        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf" target="_blank">Slides</a>]
     		</li>
     		<li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
     			Framework to Peer-to-Peer Computing Applications. 4th International 
     			Conference on Computational Collective Intelligence Technologies and 
     			Applications (ICCCI 2012), Ho Chi Minh City, November 2012. 
     			Springer LNAI 7654
-    			[<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8">PDF</a>]
+    			[<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8" target="_blank">PDF</a>]
     		</li>
     		<li>H V Pham, T H Dang. A Cloud-Based HPC Cluster Model for Academic Institution. 
     			Journal of Science and Technology, Vietnamese Academy of Science and 
@@ -152,7 +155,7 @@
   	</div>
   	<div class="panel-body">
     	<ul>
-    		<li><a href="http://www.badminton-lugano.ch/index.php/en/">Badminton</a></li>
+    		<li><a href="http://www.badminton-lugano.ch/index.php/en/" target="_blank">Badminton</a></li>
     		<li>Football</li>
     	</ul>
   	</div>
