link Frenetic VM

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
     	<h3 class="panel-title">Research</h3>
   	</div>
   	<div class="panel-body">
+      <h5>Resources</h5>
+      <ul>
+      <li><a href ="https://drive.google.com/file/d/0B6C-MR5-BVNgRldraWhST2FqTlU/view?usp=sharing" target="_blank">Frenetic VM</a>
+      <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/></li>
+      </ul>
+      <h5>Research interests</h5>
   		<ul>
   			<li>Software Defined Networking</li>
   			<li>Network Management</li>
@@ -83,6 +89,7 @@
         <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/" target="_blank">Running Deadlines</a></li>
         <li><a href="http://sdn.ieee.org/conferences-events.html" target="_blank">sdn.ieee.org</a></li>
       </ul> 
+
   	</div>
   </div>
   <div class="panel panel-default"><a name="publication"></a>
@@ -91,10 +98,10 @@
   	</div>
   	<div class="panel-body">
     	<ul>
-                <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
+        <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
                     NetPaxos: Consensus at Network Speed.
                     1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
-                </li>
+        </li>
     		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
     			Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
     			Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.	
@@ -127,7 +134,8 @@
   	<div class="panel-body">
     	<h5>Università dell Svizzera Italiana (USI)</h5>
     		<ul>
-    			<li>Enterprise Resource Planning, 2014</li>
+          <li>Enterprise Resource Planning, 2014</li>
+    			<li>Network Programming Languages, 2015</li>
     		</ul>
     	<h5>Ho Chi Minh International University (HCMIU)</h5>
     		<ul>
