Add technical report

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
   	</div>
   	<div class="panel-body">
     	<ul>
+        <li>Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soulé.
+            <a href="http://www.old.inf.usi.ch/file/pub/88/p4paxos.pdf" target="_blank">Paxos Made Switch-y.</a>Technical Report 2015/05, Nov 2015.
+        </li>
         <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
                     NetPaxos: Consensus at Network Speed.
                     1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
