Add NetPaxos project

--- a/index.html
+++ b/index.html
@@ -74,10 +74,15 @@
     	<h3 class="panel-title">Research</h3>
   	</div>
   	<div class="panel-body">
+      <h5>Current projects</h5>
+        <ul>
+          <li><a href ="http://www.inf.usi.ch/faculty/soule/netpaxos.html" target="_blank">NetPaxos</a>: Network-based consensus</li>
+        </ul>
       <h5>Resources</h5>
       <ul>
       <li><a href ="https://drive.google.com/file/d/0B6C-MR5-BVNgRldraWhST2FqTlU/view?usp=sharing" target="_blank">Frenetic VM</a>
-      <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/></li>
+      <!-- <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/> -->
+      </li>
       </ul>
       <h5>Research interests</h5>
   		<ul>
