--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -28,161 +29,178 @@
       <div class="col">
         <div class="col-xs-9 col-md-9 col-lg-9">
           <address>
-  			<strong>PhD Student</strong><br>
-  			<a href="http://www.inf.usi.ch" target="_blank">Faculty of Informatics</a><br>
-  			<a href="http://www.usi.ch" target="_blank">University of Lugano (USI)</a><br>
-  			Via Giuseppe Buffi 13,<br>
-  			CH-6904 Lugano, Switzerland<br>
-		</address>
+           <strong>PhD Student</strong><br>
+           <a href="http://www.inf.usi.ch" target="_blank">Faculty of Informatics</a><br>
+           <a href="http://www.usi.ch" target="_blank">University of Lugano (USI)</a><br>
+           Via Giuseppe Buffi 13,<br>
+           CH-6904 Lugano, Switzerland<br>
+         </address>
 
-		<address>
-  			<strong>Huynh Tu Dang</strong><br>
-  			<a href="mailto:huynh.tu.dang@usi.ch" target="_blank">huynh.tu.dang@usi.ch</a>
-		</address>
-		<address>
-  			<a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00" target="_blank">Curriculum Vitae (Nov. 2015)</a>
-		</address>
-        </div>
-        
-        <div class="col-xs-3 col-md-3 col-lg-3">
-          <img src="https://avatars2.githubusercontent.com/u/2855219?v=3&s=460" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
-        </div>
-        <div class="row">
-        </div>
+         <address>
+           <strong>Huynh Tu Dang</strong><br>
+           <a href="mailto:huynh.tu.dang@usi.ch" target="_blank">huynh.tu.dang@usi.ch</a>
+         </address>
+         <address>
+           <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00" target="_blank">Curriculum Vitae (Nov. 2015)</a>
+         </address>
+       </div>
+
+       <div class="col-xs-3 col-md-3 col-lg-3">
+        <img src="https://avatars2.githubusercontent.com/u/2855219?v=3&s=460" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+      </div>
+      <div class="row">
       </div>
     </div>
+  </div>
   
-  <div class="panel panel-default"><a name="home"></a>
-  	<div class="panel-heading">
-    	<h3 class="panel-title">Biography</h3>
-  	</div>
-  	<div class="panel-body">
-    	I'm a PhD student at USI, under supervision of Prof.
-    	<a href="http://www.inf.usi.ch/faculty/soule/" target="_blank">Robert Soule</a>
-        and Prof. 
-    	<a href="http://www.inf.usi.ch/faculty/pedone/" target="_blank">Fernando Pedone</a>.
-		Before, I have worked as a teaching assistant for three years at 
-		<a href="http://hcmiu.edu.vn" target="_blank">Ho Chi Minh 
-		International University</a> in Vietnam. 
-		I got my master degree in 2013 at <a href="http://unice.fr" target="_blank">Nice-Sophia Antipolis</a>
-		During my internship at OASIS (INRIA, Sophia Antipolis), I worked with Prof.
-		<a href="https://sites.google.com/site/hermenierfabien/" target="_blank">Fabien Hermenier</a>
-  	</div>
-  </div>
-  <div class="panel panel-default"><a name="research"></a>
-  	<div class="panel-heading">
-    	<h3 class="panel-title">Research</h3>
-  	</div>
-  	<div class="panel-body">
-      <h5>Current projects</h5>
-        <ul>
-          <li><a href ="http://www.inf.usi.ch/faculty/soule/netpaxos.html" target="_blank">NetPaxos</a>: Network-based consensus</li>
-        </ul>
-      <h5>Resources</h5>
-      <ul>
-      <li><a href ="https://drive.google.com/file/d/0B6C-MR5-BVNgRldraWhST2FqTlU/view?usp=sharing" target="_blank">Frenetic VM</a>
-      <!-- <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/> -->
-      </li>
-      </ul>
-      <h5>Research interests</h5>
-  		<ul>
-  			<li>Software Defined Networking</li>
-  			<li>Network Management</li>
-  		</ul>
-      <h5>Seminars & Conferences</h5>
-      <ul>
-        <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/" target="_blank">Running Deadlines</a></li>
-        <li><a href="http://sdn.ieee.org/conferences-events.html" target="_blank">sdn.ieee.org</a></li>
-      </ul> 
-
-  	</div>
-  </div>
-  <div class="panel panel-default"><a name="publication"></a>
-  	<div class="panel-heading">
-    	<h3 class="panel-title">Publications</h3>
-  	</div>
-  	<div class="panel-body">
-    	<ul>
-        <li>Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soulé.
-            <a href="http://www.old.inf.usi.ch/file/pub/88/p4paxos.pdf" target="_blank">Paxos Made Switch-y.</a>Technical Report 2015/05, Nov 2015.
-        </li>
-        <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
-                    NetPaxos: Consensus at Network Speed.
-                    1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
-        </li>
-    		<li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
-    			Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
-    			Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.	
-    		</li>
-    		<li>H.T. Dang, F. Hermenier. Higher SLA Satisfaction in Datacenters with 
-    			Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
-    			Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
-    			[<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
-                        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf" target="_blank">Slides</a>]
-    		</li>
-    		<li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
-    			Framework to Peer-to-Peer Computing Applications. 4th International 
-    			Conference on Computational Collective Intelligence Technologies and 
-    			Applications (ICCCI 2012), Ho Chi Minh City, November 2012. 
-    			Springer LNAI 7654
-    			[<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8" target="_blank">PDF</a>]
-    		</li>
-    		<li>H V Pham, T H Dang. A Cloud-Based HPC Cluster Model for Academic Institution. 
-    			Journal of Science and Technology, Vietnamese Academy of Science and 
-    			Technology, ISSN 0866-708X (A special issue on International Conference 
-    			on Advanced Computing and Applications 2011) 
-    		</li>
-    	</ul>
-  	</div>
-  </div>
-  <div class="panel panel-default"><a name="teaching"></a>
-  	<div class="panel-heading">
-    	<h3 class="panel-title">Teaching Assistant</h3>
-  	</div>
-  	<div class="panel-body">
-    	<h5>Università dell Svizzera Italiana (USI)</h5>
-    		<ul>
-          <li>Enterprise Resource Planning, 2014</li>
-    			<li>Network Programming Languages, 2015</li>
-    		</ul>
-    	<h5>Ho Chi Minh International University (HCMIU)</h5>
-    		<ul>
-    			<li>Operating System, Fall - 2012</li>    			
-    			<li>C/C++ Programming in Linux,  2011</li>
-    			<li>Object-Oriented Programming, 2011</li>
-    			<li>Distributed System, 2011</li>
-    			<li>Data Structure & Algorithms, 2010</li>    			
-    		</ul>
-  	</div>
-  </div>
-  <div class="panel panel-default"><a name="talks"></a>
+<div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default"><a name="home"></a>
+       <div class="panel-heading">
+         <h3 class="panel-title">Biography</h3>
+       </div>
+       <div class="panel-body">
+         I'm a PhD student at USI, under supervision of Prof.
+         <a href="http://www.inf.usi.ch/faculty/soule/" target="_blank">Robert Soule</a>
+         and Prof. 
+         <a href="http://www.inf.usi.ch/faculty/pedone/" target="_blank">Fernando Pedone</a>.
+         Before, I have worked as a teaching assistant for three years at 
+         <a href="http://hcmiu.edu.vn" target="_blank">Ho Chi Minh 
+          International University</a> in Vietnam. 
+          I got my master degree in 2013 at <a href="http://unice.fr" target="_blank">Nice-Sophia Antipolis</a>
+          During my internship at OASIS (INRIA, Sophia Antipolis), I worked with Prof.
+          <a href="https://sites.google.com/site/hermenierfabien/" target="_blank">Fabien Hermenier</a>
+        </div>
+      </div>
+     <div class="panel panel-default"><a name="teaching"></a>
     <div class="panel-heading">
-      <h3 class="panel-title">Talks</h3>
+      <h3 class="panel-title">Teaching Assistant</h3>
+    </div>
+    <div class="panel-body">
+      <h5>Università dell Svizzera Italiana (USI)</h5>
+      <ul>
+        <li>Enterprise Resource Planning, 2014</li>
+        <li>Network Programming Languages, 2015</li>
+      </ul>
+      <h5>Ho Chi Minh International University (HCMIU)</h5>
+      <ul>
+        <li>Operating System, Fall - 2012</li>          
+        <li>C/C++ Programming in Linux,  2011</li>
+        <li>Object-Oriented Programming, 2011</li>
+        <li>Distributed System, 2011</li>
+        <li>Data Structure & Algorithms, 2010</li>          
+      </ul>
+    </div>
+  </div>
+
+    </div>
+    <div class="col-md-6">
+      <div class="panel panel-default"><a name="research"></a>
+       <div class="panel-heading">
+         <h3 class="panel-title">Research</h3>
+       </div>
+       <div class="panel-body">
+          <h5>Current projects</h5>
+          <ul>
+            <li><a href ="http://www.inf.usi.ch/faculty/soule/netpaxos.html" target="_blank">NetPaxos</a>: Network-based consensus</li>
+          </ul>
+          <h5>Resources</h5>
+          <ul>
+            <li><a href ="https://drive.google.com/file/d/0B6C-MR5-BVNgRldraWhST2FqTlU/view?usp=sharing" target="_blank">Frenetic VM</a>
+              <!-- <img src="http://www.gifandgif.eu/animated_gif/New/Animated%20Gif%20New%20(63).gif"/> -->
+            </li>
+          </ul>
+          <h5>Research interests</h5>
+          <ul>
+           <li>Software Defined Networking</li>
+           <li>Network Management</li>
+         </ul>
+         <h5>Seminars & Conferences</h5>
+           <ul>
+            <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/" target="_blank">Running Deadlines</a></li>
+            <li><a href="http://sdn.ieee.org/conferences-events.html" target="_blank">sdn.ieee.org</a></li>
+          </ul> 
+        </div>
+      </div>
+      <div class="panel panel-default"><a name="talks"></a>
+      <div class="panel-heading">
+        <h3 class="panel-title">Talks</h3>
     </div>
     <div class="panel-body">
       <ul>
         <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015</li>
       </ul>
     </div>
+    </div>
+     </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="panel panel-default"><a name="publication"></a>
+  <div class="panel-heading">
+    <h3 class="panel-title">Publications</h3>
   </div>
-  <div class="panel panel-default"><a name="activity"></a>
-  	<div class="panel-heading">
-    	<h3 class="panel-title">Activities</h3>
-  	</div>
-  	<div class="panel-body">
-    	<ul>
-    		<li><a href="http://www.badminton-lugano.ch/index.php/en/" target="_blank">Badminton</a></li>
-    		<li>Football</li>
-    	</ul>
-  	</div>
+  <div class="panel-body">
+    <ul>
+      <li>Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soulé.
+        <a href="http://www.old.inf.usi.ch/file/pub/88/p4paxos.pdf" target="_blank">Paxos Made Switch-y.</a>Technical Report 2015/05, Nov 2015.
+      </li>
+      <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
+        NetPaxos: Consensus at Network Speed.
+        1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
+      </li>
+      <li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
+        Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
+        Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.  
+      </li>
+      <li>H.T. Dang, F. Hermenier. Higher SLA Satisfaction in Datacenters with 
+        Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
+        Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
+        [<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
+        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf" target="_blank">Slides</a>]
+      </li>
+      <li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
+        Framework to Peer-to-Peer Computing Applications. 4th International 
+        Conference on Computational Collective Intelligence Technologies and 
+        Applications (ICCCI 2012), Ho Chi Minh City, November 2012. 
+        Springer LNAI 7654
+        [<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8" target="_blank">PDF</a>]
+      </li>
+      <li>H V Pham, T H Dang. A Cloud-Based HPC Cluster Model for Academic Institution. 
+        Journal of Science and Technology, Vietnamese Academy of Science and 
+        Technology, ISSN 0866-708X (A special issue on International Conference 
+        on Advanced Computing and Applications 2011) 
+      </li>
+    </ul>
   </div>
+    </div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script>
+  <div class="col-md-6">
+
+
+    <div class="panel panel-default"><a name="activity"></a>
+     <div class="panel-heading">
+       <h3 class="panel-title">Activities</h3>
+     </div>
+     <div class="panel-body">
+       <ul>
+        <li><a href="http://www.badminton-lugano.ch/index.php/en/" target="_blank">Badminton</a></li>
+        <li>Football</li>
+      </ul>
+    </div>
+</div>
+
+  </div>
+</div>
+
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-68626796-1', 'auto');
