--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
            <a href="mailto:huynh.tu.dang@usi.ch" target="_blank">huynh.tu.dang@usi.ch</a>
          </address>
          <address>
-           <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00" target="_blank">Curriculum Vitae (Nov. 2015)</a>
+            <a href="https://ch.linkedin.com/in/tu-dang-580b6a23"><img class="page-menu-link-icon" src="images/linkedin.png" width="40" height="40" alt="Tu Dang's linkedin" /></a>
+            <a href="https://github.com/tudang"><img class="page-menu-link-icon" src="images/github.png" width="50" height="50" alt="Tu Dang's Github" /></a> 
+            <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00"><img class="page-menu-link-icon" src="images/cv.png" width="40" height="40" alt="Tu Dang's Curriculum Vitae. Nov 2015" /></a> 
          </address>
        </div>
 
        <div class="col-xs-3 col-md-3 col-lg-3">
-        <img src="https://avatars2.githubusercontent.com/u/2855219?v=3&s=460" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
-      </div>
+        <img src="https://avatars2.githubusercontent.com/u/2855219?v=3&s=460" class="img-thumbnail" alt="Cinque Terre" width="304" height="236">
+          </div>
       <div class="row">
       </div>
     </div>
@@ -79,7 +81,7 @@
     <div class="panel-body">
       <h5>Università dell Svizzera Italiana (USI)</h5>
       <ul>
-        <li>Enterprise Resource Planning, 2014</li>
+        <li>Enterprise Resource Planning, 2014, 2015</li>
         <li>Network Programming Languages, 2015</li>
       </ul>
       <h5>Ho Chi Minh International University (HCMIU)</h5>
