--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     </div>
     <div class="panel-body">
       <ul>
-        <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015</li>
+        <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015.
+        <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgZFE3NXlBb3g3NW8">[Slides]</a></li>
       </ul>
     </div>
     </div>
