--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="panel-body">
     <ul>
       <li>Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soulé.
-        <a href="http://www.old.inf.usi.ch/file/pub/88/p4paxos.pdf" target="_blank">Paxos Made Switch-y.</a>Technical Report 2015/05, Nov 2015.
+        <a href="http://www.inf.usi.ch/faculty/soule/ccr2016.pdf" target="_blank">Paxos Made Switch-y.</a>SIGCOMM Computer Communication Review (SIGCOMM CCR), April 2016.
       </li>
       <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
         NetPaxos: Consensus at Network Speed.
@@ -157,8 +157,8 @@
         Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
         Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.  
       </li>
-      <li>H.T. Dang, F. Hermenier. Higher SLA Satisfaction in Datacenters with 
-        Continuous VM Placement Constraints. 9th Workshop on Hot Topics in 
+      <li>H.T. Dang, F. Hermenier.<a href="http://dl.acm.org/citation.cfm?id=2524226">Higher SLA Satisfaction in Datacenters with 
+        Continuous VM Placement Constraints</a>. 9th Workshop on Hot Topics in 
         Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
         [<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
         [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf" target="_blank">Slides</a>]
