add system page

--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Dang Huynh Tu</a>
+        <a class="navbar-brand" href="#">Huynh Tu Dang</a>
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#home">Home</a></li>
-          <li><a href="#research">Research</a></li> 
-          <li><a href="#publication">Publications</a></li>
-          <li><a href="#teaching">Teachings</a></li>  
-          <li><a href="#activity">Activities</a></li>
+          <li><a href="system.html">System Group</a></li>
         </ul>
       </div>
     </div>
