--- a/system.html
+++ b/system.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>USI System Reading Group</title>
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-  <nav class="navbar">
+  <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Huynh Tu Dang</a>
@@ -21,34 +22,30 @@
     </div>
   </nav>
 
-  
-<div class="row">
-  <div class="col-md-1"></div>  
-  <div class="col-md-10">
-    <div class="panel panel-default"><a name="home"></a>
-      <div class="panel-heading">
-        <h3 class="panel-title">Group Presentation</h3>
-      </div>
-      <div class="panel-body">
-        <ul>
-          <li>February 24th, 2016
-            <ul>
-              <li>Consensus in a Box: Inexpensive coordination in Hardware (Huynh Tu Dang)</li>
-            </ul>
-          </li>
 
-          <li>March 2nd, 2016</li>
-      </ul>
-      </div>
-    </div>
-  <div class="col-md-1"></div>  
+<div class="container">
+    <h2>System Reading Group</h2>
+    <hr/>
+    <h4>Time: every Wednesday at 14:00</h4>
+    <h4>Location: SI-003 (Informatics building)</h4>
+    <hr/>
+  <div class="list-group">
+    <a href="#" class="list-group-item active">
+      <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware</h4>
+      <p class="list-group-item-text">February 24th, 2016</p>
+      <p class="list-group-item-text">Huynh Tu Dang</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Mystery Paper</h4>
+      <p class="list-group-item-text">March 2nd, 2016</p>
+      <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
+    </a>
+  </div>
 </div>
 
 
 
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
