--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Huynh Tu Dang</a>
