Update system page

--- a/system.html
+++ b/system.html
@@ -31,12 +31,12 @@
     <hr/>
   <div class="list-group">
     <a href="#" class="list-group-item active">
-      <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware</h4>
+      <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware (NSDI'16)</h4>
       <p class="list-group-item-text">February 24th, 2016</p>
       <p class="list-group-item-text">Huynh Tu Dang</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Mystery Paper</h4>
+      <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
       <p class="list-group-item-text">March 2nd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
     </a>
