change location to SI-006

--- a/system.html
+++ b/system.html
@@ -26,11 +26,15 @@
 <div class="container">
     <h2>System Reading Group</h2>
     <hr/>
-    <h4>Time: every Wednesday at 14:00</h4>
-    <h4>Location: SI-003 (Informatics building)</h4>
+    <h4>Time: every Thursday at 14:00</h4>
+    <h4>Location: SI-006 (Informatics building)</h4>
+    <div class="alert alert-info">
+      <strong>Info!</strong> The room SI-004 is reserved for 2nd March only. From 10th March, SI-006 is the regular place for System reading group
+    </div>
+
     <hr/>
   <div class="list-group">
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware (NSDI'16)</h4>
       <p class="list-group-item-text">February 24th, 2016</p>
       <p class="list-group-item-text">Huynh Tu Dang</p>
