--- a/system.html
+++ b/system.html
@@ -39,7 +39,7 @@
       <p class="list-group-item-text">February 24th, 2016</p>
       <p class="list-group-item-text">Huynh Tu Dang</p>
     </a>
-    <a href="#" class="list-group-item">
+    <a href="#" class="list-group-item active">
       <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
       <p class="list-group-item-text">March 2nd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
