--- a/system.html
+++ b/system.html
@@ -41,7 +41,7 @@
     </a>
     <a href="#" class="list-group-item active">
       <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
-      <p class="list-group-item-text">March 2nd, 2016</p>
+      <p class="list-group-item-text">March 3rd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
     </a>
   </div>
