--- a/system.html
+++ b/system.html
@@ -44,6 +44,11 @@
       <p class="list-group-item-text">March 3rd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
     </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Yesquel: scalable sql storage for web applications (ICDCN'15)</h4>
+      <p class="list-group-item-text">March 10th, 2016</p>
+      <p class="list-group-item-text">Samuel Benz</p>
+    </a>
   </div>
 </div>
 
