--- a/system.html
+++ b/system.html
@@ -28,9 +28,9 @@
     <hr/>
     <h4>Time: every Thursday at 14:00</h4>
     <h4>Location: SI-006 (Informatics building)</h4>
-    <div class="alert alert-info">
+<!--     <div class="alert alert-info">
       <strong>Info!</strong> The room SI-004 is reserved for 2nd March only. From 10th March, SI-006 is the regular place for System reading group
-    </div>
+    </div> -->
 
     <hr/>
   <div class="list-group">
@@ -39,12 +39,12 @@
       <p class="list-group-item-text">February 24th, 2016</p>
       <p class="list-group-item-text">Huynh Tu Dang</p>
     </a>
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
       <p class="list-group-item-text">March 3rd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
     </a>
-    <a href="#" class="list-group-item">
+    <a href="#" class="list-group-item active">
       <h4 class="list-group-item-heading">Yesquel: scalable sql storage for web applications (ICDCN'15)</h4>
       <p class="list-group-item-text">March 10th, 2016</p>
       <p class="list-group-item-text">Samuel Benz</p>
