Update representation record

--- a/system.html
+++ b/system.html
@@ -62,7 +62,7 @@
       <p class="list-group-item-text">March 31st, 2016</p>
       <p class="list-group-item-text"></p>
     </a>
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Data Centric Cloud Types</h4>
       <p class="list-group-item-text">April 7th, 2016</p>
       <p class="list-group-item-text">Nosheen Zaza</p>
@@ -71,6 +71,11 @@
       <h4 class="list-group-item-heading">LEOPARD: Lightweight Edge-Oriented Partitioning and Replication for Dynamic Graphs</h4>
       <p class="list-group-item-text">April 14th, 2016</p>
       <p class="list-group-item-text">Enrique Fynn</p>
+    </a>
+    <a href="#" class="list-group-item active">
+      <h4 class="list-group-item-heading">Dynamic Scalable State Machine Replication (DSN'46)</h4>
+      <p class="list-group-item-text">May 12th, 2016</p>
+      <p class="list-group-item-text">Long Hoang Le</p>
     </a>
   </div>
 </div>
