Update representation record

--- a/system.html
+++ b/system.html
@@ -34,33 +34,20 @@
 
     <hr/>
   <div class="list-group">
-    <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware (NSDI'16)</h4>
-      <p class="list-group-item-text">February 24th, 2016</p>
-      <p class="list-group-item-text">Huynh Tu Dang</p>
+    <a href="#" class="list-group-item active">
+      <h4 class="list-group-item-heading">Scalable Atomic Visibility with RAMP Transactions (SIGMOD'14)</h4>
+      <p class="list-group-item-text">June 2nd, 2016</p>
+      <p class="list-group-item-text">Paulo Coelho</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
-      <p class="list-group-item-text">March 3rd, 2016</p>
-      <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
+      <h4 class="list-group-item-heading">Dynamic Scalable State Machine Replication (DSN'46)</h4>
+      <p class="list-group-item-text">May 12th, 2016</p>
+      <p class="list-group-item-text">Long Hoang Le</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Yesquel: scalable sql storage for web applications (ICDCN'15)</h4>
-      <p class="list-group-item-text">March 10th, 2016</p>
-      <p class="list-group-item-text">Samuel Benz</p>
-    </a>
-    <a href="#" class="list-group-item">
-      <p class="list-group-item-text">March 17th, 2016</p>
-    </a>
-    <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">High Throughput Forwarding for ICN with Descriptors and Locators (ANCS'16)</h4>
-      <p class="list-group-item-text">March 24th, 2016</p>
-      <p class="list-group-item-text">Daniele Rogora</p>
-    </a>
-    <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading"></h4>
-      <p class="list-group-item-text">March 31st, 2016</p>
-      <p class="list-group-item-text"></p>
+      <h4 class="list-group-item-heading">LEOPARD: Lightweight Edge-Oriented Partitioning and Replication for Dynamic Graphs</h4>
+      <p class="list-group-item-text">April 14th, 2016</p>
+      <p class="list-group-item-text">Enrique Fynn</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Data Centric Cloud Types</h4>
@@ -68,14 +55,24 @@
       <p class="list-group-item-text">Nosheen Zaza</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">LEOPARD: Lightweight Edge-Oriented Partitioning and Replication for Dynamic Graphs</h4>
-      <p class="list-group-item-text">April 14th, 2016</p>
-      <p class="list-group-item-text">Enrique Fynn</p>
+      <h4 class="list-group-item-heading">High Throughput Forwarding for ICN with Descriptors and Locators (ANCS'16)</h4>
+      <p class="list-group-item-text">March 24th, 2016</p>
+      <p class="list-group-item-text">Daniele Rogora</p>
     </a>
-    <a href="#" class="list-group-item active">
-      <h4 class="list-group-item-heading">Dynamic Scalable State Machine Replication (DSN'46)</h4>
-      <p class="list-group-item-text">May 12th, 2016</p>
-      <p class="list-group-item-text">Long Hoang Le</p>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Yesquel: scalable sql storage for web applications (ICDCN'15)</h4>
+      <p class="list-group-item-text">March 10th, 2016</p>
+      <p class="list-group-item-text">Samuel Benz</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Building Consistent Transactions with Inconsistent Replication (SOSP'15)</h4>
+      <p class="list-group-item-text">March 3rd, 2016</p>
+      <p class="list-group-item-text">Leandro Pacheco de Sousa</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Consensus in a Box: Inexpensive coordination in Hardware (NSDI'16)</h4>
+      <p class="list-group-item-text">February 24th, 2016</p>
+      <p class="list-group-item-text">Huynh Tu Dang</p>
     </a>
   </div>
 </div>
