--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Huynh Tu Dang</a>
+        <a class="navbar-brand" href="index.html">Huynh Tu Dang</a>
       </div>
       <div>
         <ul class="nav navbar-nav">
           <li><a href="system.html">System Group</a></li>
         </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="publications.html">Publications</a></li>
+        </ul>
       </div>
     </div>
   </nav>
+
   <div class="container">
   	<div class="page-header">  
       <div class="col">
@@ -126,6 +131,11 @@
     </div>
     <div class="panel-body">
       <ul>
+        <li> CAANS: Consensus as a network service. Netronome Submmer Webinar Series, 27 July 2016.
+        <a href="resources/Open-NFP_CAANS.pdf">[Slides]</a>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        </li>
         <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015.
         <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgZFE3NXlBb3g3NW8">[Slides]</a></li>
       </ul>
@@ -136,48 +146,8 @@
 
 <div class="row">
   <div class="col-md-6">
-    <div class="panel panel-default"><a name="publication"></a>
-  <div class="panel-heading">
-    <h3 class="panel-title">Publications</h3>
-  </div>
-  <div class="panel-body">
-    <ul>
-      <li>Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soulé.
-        <a href="http://www.inf.usi.ch/faculty/soule/ccr2016.pdf" target="_blank">Paxos Made Switch-y.</a>SIGCOMM Computer Communication Review (SIGCOMM CCR), April 2016.
-      </li>
-      <li>Huynh Tu Dang, Daniele Sciascia, Marco Canini, Fernando Pedone, and Robert Soulé.
-        NetPaxos: Consensus at Network Speed.
-        1st ACM Sigcomm Symposium on SDN Research <a href="http://www.inf.usi.ch/faculty/soule/sosr15.pdf" target="_blank">(SOSR' 15)</a>, June 2015.
-      </li>
-      <li>H.M. Tran, S.V.U. Ha, T.H. Dang, K.V. Huynh. Fault Resolution System for 
-        Inter-Cloud Environment. Journal of Mobile Multimedia: Advanced Computing 
-        Issues in Data and Security Engineering, 10(1&2): 16-29, Rinton Press, 2014.  
-      </li>
-      <li>H.T. Dang, F. Hermenier.<a href="http://dl.acm.org/citation.cfm?id=2524226">Higher SLA Satisfaction in Datacenters with 
-        Continuous VM Placement Constraints</a>. 9th Workshop on Hot Topics in 
-        Dependable Systems,November 2013, Nemacolin Woodlands Resort (PA), USA
-        [<a href="http://dl.acm.org/citation.cfm?id=2524226">PDF</a>]
-        [<a href="http://www-sop.inria.fr/oasis/userfiles/file/roundtable/Hermenier-2014.pdf" target="_blank">Slides</a>]
-      </li>
-      <li>H.T. Dang, H.M. Tran, P.N. Vu, and A.T. Nguyen. Applying MapReduce 
-        Framework to Peer-to-Peer Computing Applications. 4th International 
-        Conference on Computational Collective Intelligence Technologies and 
-        Applications (ICCCI 2012), Ho Chi Minh City, November 2012. 
-        Springer LNAI 7654
-        [<a href="hhttp://link.springer.com/chapter/10.1007%2F978-3-642-34707-8_8" target="_blank">PDF</a>]
-      </li>
-      <li>H V Pham, T H Dang. A Cloud-Based HPC Cluster Model for Academic Institution. 
-        Journal of Science and Technology, Vietnamese Academy of Science and 
-        Technology, ISSN 0866-708X (A special issue on International Conference 
-        on Advanced Computing and Applications 2011) 
-      </li>
-    </ul>
-  </div>
-    </div>
   </div>
   <div class="col-md-6">
-
-
     <div class="panel panel-default"><a name="activity"></a>
      <div class="panel-heading">
        <h3 class="panel-title">Activities</h3>
