--- a/system.html
+++ b/system.html
@@ -9,15 +9,19 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Huynh Tu Dang</a>
       </div>
       <div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">System Group</a></li>
-      </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="system.html">System Group</a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="publications.html">Publications</a></li>
+        </ul>
       </div>
     </div>
   </nav>
