--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
     </div>
     <div class="panel-body">
       <ul>
+        <li> CAANS: Consensus as a network service. P4 Tutorial (SIGCOMM), 26 August 2016.
+        <a href="resources/NetPaxos.pdf">[Slides]</a>
+        </li>
         <li> CAANS: Consensus as a network service. Netronome Submmer Webinar Series, 27 July 2016.
         <a href="resources/Open-NFP_CAANS.pdf">[Slides]</a>
-        <span class="glyphicon glyphicon-star"></span>
-        <span class="glyphicon glyphicon-star"></span>
         </li>
         <li>NetPaxos: Consensus at Network Speed. Open Networking Summit (ONS'15), 17 June 2015.
         <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgZFE3NXlBb3g3NW8">[Slides]</a></li>
