--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
          </ul>
          <h5>Seminars & Conferences</h5>
            <ul>
-            <li><a href="https://team.inria.fr/coati/seminars-and-conferences/running-deadlines/" target="_blank">Running Deadlines</a></li>
-            <li><a href="http://sdn.ieee.org/conferences-events.html" target="_blank">sdn.ieee.org</a></li>
+            <li><a href="https://www.usenix.org/conferences" target="_blank">USENIX</a></li>
+            <li><a href="http://www.sigcomm.org/events/" target="_blank">SIGCOMM</a></li>
+            <li><a href="https://www.acm.org/upcoming-conferences" target="_blank">ACM</a></li>
           </ul> 
         </div>
       </div>
