Update presentation list

--- a/system.html
+++ b/system.html
@@ -38,7 +38,12 @@
 
     <hr/>
   <div class="list-group">
-    <a href="#" class="list-group-item active">
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">GlobalFS: A Strongly Consistent Multi-Site Filesystem, (SRDS 2016)</h4>
+      <p class="list-group-item-text">September 22nd, 2016</p>
+      <p class="list-group-item-text">Leandro Pacheco</p>
+    </a>
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">PISCES: A programmable, Protocol-Independent Software Switch, (ACM SIGCOMM 2016)</h4>
       <p class="list-group-item-text">June 9th, 2016</p>
       <p class="list-group-item-text">Tu Dang</p>
