--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       <h5>Università dell Svizzera Italiana (USI)</h5>
       <ul>
         <li>Enterprise Resource Planning, 2014, 2015</li>
-        <li>Network Programming Languages, 2015</li>
+        <li>Data Management, 2016</li>
+        <li>Advanced Networking, 2016</li>
       </ul>
       <h5>Ho Chi Minh International University (HCMIU)</h5>
       <ul>
