--- a/system.html
+++ b/system.html
@@ -39,6 +39,17 @@
     <hr/>
   <div class="list-group">
     <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">Just say NO to Paxos overhead:
+                    Replacing consensus with network ordering, (OSDI 2016)</h4>
+      <p class="list-group-item-text">October 13th, 2016</p>
+      <p class="list-group-item-text">Pietro Bressana</p>
+    </a>
+    <a href="#" class="list-group-item active">
+      <h4 class="list-group-item-heading">Be Fast, Cheap and in Control with SwitchKV, (NSDI 2016)</h4>
+      <p class="list-group-item-text">October 6th, 2016</p>
+      <p class="list-group-item-text">Theo Jepsen</p>
+    </a>
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">GlobalFS: A Strongly Consistent Multi-Site Filesystem, (SRDS 2016)</h4>
       <p class="list-group-item-text">September 22nd, 2016</p>
       <p class="list-group-item-text">Leandro Pacheco</p>
