--- a/system.html
+++ b/system.html
@@ -31,7 +31,7 @@
     <h2>System Reading Group</h2>
     <hr/>
     <h4>Time: every Thursday at 14:00</h4>
-    <h4>Location: SI-006 (Informatics building)</h4>
+    <h4>Location: SI-103 (Informatics building) until 23.12.16</h4>
 <!--     <div class="alert alert-info">
       <strong>Info!</strong> The room SI-004 is reserved for 2nd March only. From 10th March, SI-006 is the regular place for System reading group
     </div> -->
