--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
        <div class="panel-body">
           <h5>Current projects</h5>
           <ul>
+            <li><a href ="https://github.com/usi-systems/p4benchmark" target="_blank">Whippersnapper</a>: A P4 Language Benchmark Suite <span class="glyphicon glyphicon-star"></span></li>
             <li><a href ="http://www.inf.usi.ch/faculty/soule/netpaxos.html" target="_blank">NetPaxos</a>: Network-based consensus</li>
           </ul>
           <h5>Resources</h5>
