--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <address>
             <a href="https://ch.linkedin.com/in/tu-dang-580b6a23"><img class="page-menu-link-icon" src="images/linkedin.png" width="40" height="40" alt="Tu Dang's linkedin" /></a>
             <a href="https://github.com/tudang"><img class="page-menu-link-icon" src="images/github.png" width="50" height="50" alt="Tu Dang's Github" /></a> 
-            <a href="https://drive.google.com/open?id=0B6C-MR5-BVNgRWxWcW9pQ0Jic00"><img class="page-menu-link-icon" src="images/cv.png" width="40" height="40" alt="Tu Dang's Curriculum Vitae. Nov 2015" /></a> 
+            <a href="resources/cv.pdf"><img class="page-menu-link-icon" src="images/cv.png" width="40" height="40" alt="Tu Dang's Curriculum Vitae. Nov. 2016" /></a>
          </address>
        </div>
 
