--- a/system.html
+++ b/system.html
@@ -39,6 +39,16 @@
     <hr/>
   <div class="list-group">
     <a href="#" class="list-group-item active">
+      <h4 class="list-group-item-heading">All about Eve: Execute-Verify Replication for Multi-Core Servers, (OSDI 2012)</h4>
+      <p class="list-group-item-text">1 December 2016</p>
+      <p class="list-group-item-text">Loan Ton</p>
+    </a>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading">From Distributed Programming to Big Data Analytics</h4>
+      <p class="list-group-item-text">24 November 2016</p>
+      <p class="list-group-item-text">Patrick Eugster (Guest)</p>
+    </a>
+    <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading">Just say NO to Paxos overhead:
                     Replacing consensus with network ordering, (OSDI 2016)</h4>
       <p class="list-group-item-text">November 17th, 2016</p>
