--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
     </div>
     <div class="panel-body">
       <ul>
+        <li> Whippersnapper: A P4 Language Benchmark Suite (Swiss SDN Workshop), 6 December 2016.
+        <a href="resources/Whippersnapper.pdf">[Slides]</a>
+        </li>
         <li> CAANS: Consensus as a network service. P4 Tutorial (SIGCOMM), 26 August 2016.
         <a href="resources/NetPaxos.pdf">[Slides]</a>
         </li>
