--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,16 @@
 <div class="container">
     <h2>Journals & Conferences</h2>
   <div class="list-group">
+    <a class="list-group-item" href="" target="_blank">
+      <h4 class="list-group-item-heading">Whippersnapper: A P4 Language Benchmark Suite</h4>
+      <p class="list-group-item-text">Huynh Tu Dang, Han Wang, Theo Jepsen, Gordon Brebner, Changhoon Kim, Jennifer Rexford, Robert Soule, and Hakim Weatherspoon.</p>
+      <p class="list-group-item-text">3rd ACM Sigcomm Symposium on SDN Research (SOSR' 17), April 2017</p>
+    </a>
+    <a class="list-group-item" href="" target="_blank">
+      <h4 class="list-group-item-heading">P4FPGA: A Rapid Prototyping Framework for P4</h4>
+      <p class="list-group-item-text">Han Wang, Robert Soule, Huynh Tu Dang, Ki Suh Lee, Vishal Shrivastav, Nate Foster, and Hakim Weatherspoon.</p>
+      <p class="list-group-item-text">3rd ACM Sigcomm Symposium on SDN Research (SOSR' 17), April 2017</p>
+    </a>
     <a class="list-group-item" href="http://www.inf.usi.ch/faculty/soule/ccr2016.pdf" target="_blank">
       <h4 class="list-group-item-heading">Paxos Made Switch-y</h4>
       <p class="list-group-item-text">Huynh Tu Dang, Marco Canini, Fernando Pedone, and Robert Soule</p>
