--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
     </div>
     <div class="panel-body">
       <ul>
+        <li> Whippersnapper: A P4 Language Benchmark Suite (Sandisk, Santa Clara CA), 4 April 2017.
+        <a href="resources/Whippersnapper.pdf">[Slides]</a>
+        </li>
+        <li> Whippersnapper: A P4 Language Benchmark Suite (SOSR17), 3 April 2017.
+        <a href="resources/Whippersnapper.pdf">[Slides]</a>
+        </li>
         <li> Whippersnapper: A P4 Language Benchmark Suite (Swiss SDN Workshop), 6 December 2016.
         <a href="resources/Whippersnapper.pdf">[Slides]</a>
         </li>
